# bevy_wasm_mod

./: .gitignore  Cargo.toml  QWEN.md  README-zh.md  README.md
bevy_modapi/: Cargo.toml
bevy_modapi/src/: asset.rs  lib.rs  log.rs  query.rs  resource.rs  spawn.rs
bevy_modapi_macros/: Cargo.toml
bevy_modapi_macros/src/: lib.rs
bevy_modruntime/: Cargo.toml
bevy_modruntime/src/: asset.rs  component.rs  lib.rs  log.rs  query.rs  resource.rs  spawn.rs  system.rs  utils.rs
bevy_modruntime_macros/: Cargo.toml
bevy_modruntime_macros/src/: lib.rs
bevy_modsdk/: Cargo.toml
bevy_modsdk/src/: lib.rs
bevy_modsdk_macros/: Cargo.toml
bevy_modsdk_macros/src/: lib.rs
bevy_modtypes/: Cargo.toml
bevy_modtypes/src/: lib.rs
docs/: mod组件查询实现思路.md  mod资源查询是实现思路.md  quick_start.md
docs/zh/: 快速开始.md
examples/hello_world/: README.md
examples/hello_world/game_mod/: Cargo.toml
examples/hello_world/game_mod/src/: example_asset.txt  lib.rs
examples/hello_world/game_sdk/: Cargo.toml
examples/hello_world/game_sdk/src/: lib.rs
examples/hello_world/host/: Cargo.toml
examples/hello_world/host/src/: main.rs
modapi/: Cargo.toml
modapi/src/: lib.rs
modapi_macros/: Cargo.toml
modapi_macros/src/: lib.rs
modmacros/: Cargo.toml
modmacros/src/: lib.rs
modruntime/: Cargo.toml
modruntime/src/: component.rs  lib.rs  resource.rs  utils.rs
modruntime_macros/: Cargo.toml
modruntime_macros/src/: lib.rs
modsdk/: Cargo.toml
modsdk/src/: lib.rs
modsdk_macros/: Cargo.toml
modsdk_macros/src/: lib.rs
modtypes/: Cargo.toml
modtypes/src/: lib.rs
