[package]
name = "bevy_modruntime"
edition.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
wasmtime = { version = "36.0", features = ["cranelift"] }
wasmtime-wasi = "36.0"
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
bevy_modtypes = { path = "../bevy_modtypes" }
bevy_modruntime_macros = { path = "../bevy_modruntime_macros" }
linkme = { workspace = true }
bincode = { workspace = true }
