[package]
name = "modruntime"
edition.workspace = true
version.workspace = true

[dependencies]
bevy = { workspace = true }
wasmtime = { version = "36.0", features = ["cranelift"] }
wasmtime-wasi = "36.0"
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
modtypes = { path = "../modtypes" }
modruntime_macros = { path = "../modruntime_macros" }
linkme = { workspace = true }
bincode = { workspace = true }
