[package]
name = "game_mod"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]  # Mods are compiled as WebAssembly modules

[dependencies]
bevy_math = { version = "0.16", features = ['serialize'] }
modapi = { path = "../../../modapi" }
game_sdk = { path = "../game_sdk" }
bincode = { workspace = true }
